components/dialog/index.css
/* ... */
/* the container for the heading and any additional header content */
.spectrum-Dialog-header {
	grid-area: header;
	display: flex;
	max-inline-size: 100%;
	margin-block-end: var(--spectrum-standard-dialog-spacing-title-to-description);

	/* Without this, buttons will be stretched */
	align-items: flex-start;
	justify-content: flex-start;

	box-sizing: border-box;

	outline: none; /* Hide focus outline around header */

	> .spectrum-Body {
		/* additional header content should grow/shrink with the text, but only until it takes up half of the footer */
		inline-size: fit-content;
		max-inline-size: 50%;

		/* Remove the default margin on the Typography in the header */
		margin-block: 0;
	}
}

.spectrum-Dialog-content {
	grid-area: content;
	box-sizing: border-box;

	/*
  v2 is currently worse, inputs that get focus rings get a slight clipping unless overflow: visible replaces this line
  we should think of a better way to handle this, see padding/margin below for fix
  */
	overflow-y: auto;
	-webkit-overflow-scrolling: touch;

	outline: none; /* Hide focus outline */
	font-size: var(--mod-standard-dialog-description-font-size, var(--spectrum-standard-dialog-description-font-size));
	font-weight: var(--mod-standard-dialog-description-font-weight, var(--spectrum-standard-dialog-description-font-weight));
	font-family: var(--spectrum-standard-dialog-description-font-family);
	font-style: var(--spectrum-standard-dialog-description-font-style);
	line-height: var(--mod-standard-dialog-description-line-height, var(--spectrum-standard-dialog-description-line-height));
	color: var(--mod-standard-dialog-description-text-color, var(--spectrum-standard-dialog-description-text-color));

	/* Remove the default margin on the Typography elements in the dialog's body content */
	.spectrum-Body {
		margin-block: 0;
	}
}

.spectrum-Dialog-footer {
	grid-area: footer;
	max-inline-size: 100%;

	/* this padding isn't built into the grid because it disappears with this footer */
	padding-block-start: var(--mod-standard-dialog-spacing-description-to-footer, var(--spectrum-standard-dialog-spacing-description-to-footer));

	display: flex;
	justify-content: space-between;

	outline: none; /* Hide focus outline */

	/* Both selectors are required to override the button + button rule */
	> *,
	> .spectrum-Button + .spectrum-Button {
		margin-block-end: 0;
	}

	.spectrum-Body {
		/* To keep the footer text from wrapping prematurely */
		inline-size: fit-content;
		max-inline-size: 50%;

		/* Remove the default margin on the Typography in the footer content */
		margin-block-end: 0;
	}
}

.spectrum-Dialog-buttonGroup {
	grid-area: buttonGroup;

	/* this padding should be safe as button group is always end aligned */
	padding-inline-start: var(--mod-standard-dialog-spacing-footer-to-button-group, var(--spectrum-standard-dialog-spacing-footer-to-button-group));
}

.spectrum-Dialog-buttonGroup--noFooter {
	padding-block-start: var(--mod-standard-dialog-spacing-description-to-footer, var(--spectrum-standard-dialog-spacing-description-to-footer));
}

/* Dismissible Dialog (with close button) */
.spectrum-Dialog--dismissable .spectrum-Dialog-grid {
	grid-template-columns:
		var(--mod-standard-dialog-spacing-grid-padding, var(--spectrum-standard-dialog-spacing-grid-padding))
		auto
		1fr
		auto
		minmax(0, var(--spectrum-standard-dialog-spacing-edge-to-header-content-inline-end))
		var(--mod-standard-dialog-spacing-grid-padding, var(--spectrum-standard-dialog-spacing-grid-padding));
	grid-template-rows:
		auto
		var(--mod-standard-dialog-spacing-grid-padding, var(--spectrum-standard-dialog-spacing-grid-padding))
		auto
		1fr
		auto
		var(--mod-standard-dialog-spacing-grid-padding, var(--spectrum-standard-dialog-spacing-grid-padding));
	grid-template-areas:
		"hero hero    hero    hero    hero        hero"
		".    .       .       .       closeButton closeButton"
		".    heading header  header  closeButton closeButton"
		".    content content content content     ."
		".    footer  footer  footer  footer      ."
		".    .       .       .       .           .";

	.spectrum-Dialog-footer {
		grid-area: footer;

		> .spectrum-Body {
			max-inline-size: 100%;
		}
	}
}

.spectrum-Dialog-closeButton {
	grid-area: closeButton;

	/* align and justify so it doesn't do the default 'stretch' and end up with forced height/width */
	align-self: start;
	justify-self: end;

	margin-block-start: var(--mod-standard-dialog-spacing-edge-to-close-button, var(--spectrum-standard-dialog-spacing-edge-to-close-button));
	margin-inline-end: var(--mod-standard-dialog-spacing-edge-to-close-button, var(--spectrum-standard-dialog-spacing-edge-to-close-button));
}

.spectrum-Dialog--fullscreen {
	inline-size: 100%;
	block-size: 100%;
}

.spectrum-Dialog--fullscreenTakeover {
	inline-size: 100%;
	block-size: 100%;

	border-radius: 0;
}
/* ... */

